@@ -1,5 +1,6 @@
 local gui = require("scripts.gui")
 local test_util = require("tests.test_util")
+local util = require("util")
 
 local gui_tests = { tests = { } }
 local tests = gui_tests.tests
@@ -13,6 +14,41 @@ local function find_victory_label(element)
     for _, child in pairs(element.children) do
         local caption = find_victory_label(child)
         if caption then return caption end
+    end
+end
+
+-- Recursively looks through a table's values to find a string
+---@param t table
+---@param target string
+---@return boolean?
+local function find_in_table_recursively(t, target)
+    for _, v in pairs(t) do
+        if type(v) == "table" then
+            return find_in_table_recursively(v, target)
+        elseif type(v) == "string" then
+            if v == target then return true end -- Found it!
+        end
+    end
+end
+
+---@param caption string to find in localized string tables
+---@param element LuaGuiElement?
+---@return boolean?
+local function caption_exists_in_gui(caption, element)
+    if type(caption) ~= "string" then error("Expects only string captions") end
+    if not element then element = game.player.gui.screen.bvs_game_finished end
+
+    if element.caption and type(element.caption) == "table" then
+        if find_in_table_recursively(element.caption --[[@as table]], caption) then
+            return true -- Found it!
+        end
+    end
+
+    for _, child in pairs(element.children) do
+        if caption_exists_in_gui(caption, child) then
+            -- Propagate what the child up through the generations
+            return true
+        end
     end
 end
 
@@ -39,6 +75,64 @@ function tests.create_gui_with_localized_message()
     gui.create(game.player, { }, {"item-name.iron-plate"})
 
     test_util.assert_table_equal(find_victory_label(), {"item-name.iron-plate"})
+end
+
+function tests.create_gui_with_invalid_message_debug_death()
+    test_util.assert_death(gui.create, {game.player, { }, {hungry = true}})
+end
+
+function tests.create_gui_with_invalid_message_release_ignore()
+    test_util.mock_release()
+
+    gui.create(game.player, { }, {sleepy = true})
+
+    test_util.assert_table_equal(find_victory_label(), {"gui-game-finished.victory"})
+end
+
+function tests.create_statistics()
+    local statistics = { gymnastics = { stats = {
+        jumping = { value = 5, unit = "distance", order = "b" }
+    }}}
+    gui.create(game.player, statistics)
+
+    test_util.assert_true(caption_exists_in_gui("bvs-categories.gymnastics"))
+    test_util.assert_true(caption_exists_in_gui("bvs-stats.jumping"))
+end
+
+function tests.create_category_has_no_stats_ignored()
+    local statistics = { gymnastics = {  } }
+    gui.create(game.player, statistics)
+
+    test_util.assert_falsy(caption_exists_in_gui("bvs-categories.gymnastics"))
+end
+
+function tests.create_statistics_stat_has_no_value_ignored()
+    local statistics = { gymnastics = { stats = {
+        jumping = {  }
+    }}}
+    gui.create(game.player, statistics)
+
+    test_util.assert_true(caption_exists_in_gui("bvs-categories.gymnastics"))
+    test_util.assert_falsy(caption_exists_in_gui("bvs-stats.jumping"))
+end
+
+function tests.create_statistics_unexpected_value_debug_death()
+    local statistics = { gymnastics = { stats = {
+        jumping = { value = {fish = "hungry"}, unit = "distance", order = "b" }
+    }}}
+    test_util.assert_death(gui.create, {game.player, statistics})
+end
+
+function tests.create_statistics_unexpected_value_release_ignored()
+    test_util.mock_release()
+
+    local statistics = { gymnastics = { stats = {
+        jumping = { value = {invalid="value"}, unit = "distance", order = "b" }
+    }}}
+    gui.create(game.player, statistics)
+
+    test_util.assert_true(caption_exists_in_gui("bvs-categories.gymnastics"))
+    test_util.assert_falsy(caption_exists_in_gui("bvs-stats.jumping"))
 end
 
 return gui_tests
