@@ -18,8 +18,15 @@ function test_util.reset_surface()
     return surface
 end
 
+---Used to mainly force the debug assert to act as if not debugging
+---@param enable boolean? if we should mock release
+function test_util.mock_release(enable)
+    if enable == nil then enable = true end
+    global.__testing_release = enable
+end
+
 function test_util.assert_true(a)
-    if a ~= true then error(pre.."Value is not false") end
+    if a ~= true then error(pre.."Value is not true") end
 end
 
 function test_util.assert_false(a)
@@ -49,6 +56,16 @@ function test_util.assert_table_equal(a, b)
     if type(b) ~= "table" then error(pre.. b .. " is not a table!") end
     if not util.table.compare(a, b) then
         error(pre .. "tables are not equal: "..serpent.block(a) .. " vs " .. serpent.block(b))
+    end
+end
+
+function test_util.assert_table_not_equal(a, b)
+    test_util.assert_not_nil(a)
+    test_util.assert_not_nil(b)
+    if type(a) ~= "table" then error(pre.. a .. " is not a table!") end
+    if type(b) ~= "table" then error(pre.. b .. " is not a table!") end
+    if util.table.compare(a, b) then
+        error(pre .. "tables are equal: "..serpent.block(a) .. " vs " .. serpent.block(b))
     end
 end
 
